updated addlastviewed- independant req and  api
